@@ -3745,7 +3745,7 @@ public class TownCommand extends BaseCommand implements CommandExecutor {
 		// attached to a claimed plot.
 		if (!outpost && !isEdgeBlock(town, selection) && !town.getTownBlocks().isEmpty())
 			throw new TownyException(Translatable.of("msg_err_not_attached_edge"));
-		TownyWorld world = selection.getFirst().getTownyWorld();
+		TownyWorld world = selection.get(0).getTownyWorld();
 		if (outpost && TownySettings.getOutpostsLimitedPerWorld() && world != null && !town.getTownBlocksInWorld(world).isEmpty()) {
 			throw new TownyException(Translatable.of("msg_err_cannot_claim_outpost_in_claimed_world"));
 		}
